--- a/WebContent/assets/jwiki-style.css
+++ b/WebContent/assets/jwiki-style.css
@@ -1,16 +1,5 @@
-/*
-@font-face {
-  font-family: 'Source Code Pro';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Source Code Pro'), local('SourceCodePro-Regular'), url(${contextPath}/lib/SourceCodePro-Regular.woff) format('woff');
-}
-*/
 
-* {
-    font-size: 10pt;
-    font-family: sans-serif;
-}
+* { font-size: 10pt; font-family: sans-serif; }
 
 BODY {
     margin: 0px;
@@ -19,10 +8,10 @@ BODY {
     background-color: #ffffff;
 }
 
-FORM {
-    margin: 0px;
-    padding: 0px;
-}
+FORM { margin: 0px; padding: 0px; }
+
+A:link, A:visited, A:active { color: #000000; }
+A:hover { color: #ff0099; }
 
 H1 { font-size: 20pt; padding: 0px; margin: 8px 0px 8px 0px; }
 H2 { font-size: 16pt; padding: 0px; margin: 8px 0px 8px 0px; }
@@ -31,44 +20,52 @@ H4 { font-size: 10pt; padding: 0px; margin: 8px 0px 8px 0px; }
 H5 { font-size: 9pt;  padding: 0px; margin: 8px 0px 8px 0px; }
 H6 { font-size: 8pt;  padding: 0px; margin: 8px 0px 8px 0px; }
 
-A:link, A:visited, A:active { color: #000000; }
-A:hover { color: #ff0099; }
+.jwiki-bold { font-weight: bold; color: #990066; }
+.jwiki-strike { text-decoration: line-through; color: #ff0000; }
+.jwiki-underline { text-decoration: underline; color: #000099; }
 
-.bold { font-weight: bold; color: #990066; }
-.strike { text-decoration: line-through; color: #ff0000; }
-.underline { text-decoration: underline; color: #000099; }
+.jwiki-button { padding: 0px 4px 0px 4px; }
+.jwiki-current { background-color: #ffeecc; }
+.jwiki-error-message { color: #ff0000; }
 
-.button { padding: 0px 4px 0px 4px; }
-.current { background-color: #ffeecc; }
-.error-message { color: #ff0000; }
-
-TABLE.index, TABLE.index TH, TABLE.index TD {
+TABLE.jwiki-index, TABLE.jwiki-index TH, TABLE.jwiki-index TD {
 	border-collapse: collapse;
 	border: 1px solid #000000;
 }
 
-TABLE.index TH {
+TABLE.jwiki-index TH {
 	background-color: #f0f0f0;
 	font-weight: bold;
 	text-align: middle;
 }
 
-TABLE.diff {
-    border-collapse: collapse;
-}
+.jwiki-code { font-family: 'Source Code Pro', monospace; }
 
-.code { font-family: 'Source Code Pro', monospace; }
-
-.code-block {
+.jwiki-code-block {
 	margin: 8px 0px 8px 0px;
 	padding: 4px;
 	background-color: #f0f0f0;
     border: 1px solid #666666;
 }
 
+TABLE.jwiki-solid, TABLE.jwiki-solid TH, TABLE.jwiki-solid TD {
+    border-collapse: collapse;
+    border: 1px solid #000000;
+}
+
+TABLE.jwiki-solid TH {
+    background-color: #f0f0f0;
+    font-weight: bold;
+    text-align: middle;
+}
+
+TABLE.diff {
+    border-collapse: collapse;
+}
+
 TABLE.diff TH { text-align: left; padding: 0px 0px 0px 8px; }
 	
-TABLE.diff .rdiv {
+.diff-rdiv {
   border-style: solid;
   border-color: #cccccc;
   border-width: 0px 1px 0px 0px;
@@ -80,22 +77,11 @@ TABLE.diff .rdiv {
 .diff-right-only-even { background-color: #f0fff0; }
 .diff-right-only-odd  { background-color: #e0ffe0; }
 
-.line-no {
+.diff-line-no {
 	min-width: 20px;
 	text-align: right;
 	border-style: solid;
 	border-width: 0px 2px 0px 0px;
 	border-color: #999999;
-}
-
-TABLE.solid, TABLE.solid TH, TABLE.solid TD {
-    border-collapse: collapse;
-    border: 1px solid #000000;
-}
-
-TABLE.solid TH {
-    background-color: #f0f0f0;
-    font-weight: bold;
-    text-align: middle;
 }
  
