--- a/WebContent/WEB-INF/pages/jwiki-template.jspx
+++ b/WebContent/WEB-INF/pages/jwiki-template.jspx
@@ -10,6 +10,9 @@
     <head>
 	  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	  <!-- standard.css (optional) -->
+	  <link rel="stylesheet" type="text/css" href="${pageContext.request.contextPath}/assets/standard.css" />
+	  <!-- jwiki-style.css -->
 	  <link rel="stylesheet" type="text/css" href="${pageContext.request.contextPath}/assets/jwiki-style.css" />
 	  <title><c:out value="${jwikiPage.path}"/></title>
 	</head>
