--- a/WebContent/assets/jwiki-style.css
+++ b/WebContent/assets/jwiki-style.css
@@ -65,8 +65,8 @@ TABLE.diff TH { text-align: left; padding: 0px 0px 0px 8px; }
 }
 
 .jwiki-doc {
-	margin: 4px 2px 4px 8px;
-	padding: 4px;
+	margin: 8px 0px 8px 0px;
+	padding: 4px 8px 4px 8px;
 	border-width: 1px 1px 1px 4px;
 	border-style: solid;
 	border-color: #666699;
