--- a/WebContent/assets/jwiki-style.css
+++ b/WebContent/assets/jwiki-style.css
@@ -69,5 +69,6 @@ TABLE.diff TH { text-align: left; padding: 0px 0px 0px 8px; }
 	padding: 4px 8px 4px 8px;
 	border-width: 1px 1px 1px 4px;
 	border-style: solid;
-	border-color: #666699;
+	border-color: #666666;
+	background-color: #f9f9f9;
 }
