--- a/WebContent/assets/standard.css
+++ b/WebContent/assets/standard.css
@@ -1,5 +1,5 @@
 
-* { font-size: 10pt; font-family: sans-serif; }
+* { font-size: 10pt; font-family: Meiryo, sans-serif; }
 
 BODY {
     margin: 0px;
