--- a/WebContent/assets/standard.css
+++ b/WebContent/assets/standard.css
@@ -2,20 +2,20 @@
 * { font-size: 10pt; font-family: Meiryo, sans-serif; }
 
 BODY {
-    margin: 0px;
-    padding: 8px;
+    margin: 0pt;
+    padding: 8pt;
     color: #000000;
     background-color: #ffffff;
 }
 
-FORM { margin: 0px; padding: 0px; }
+FORM { margin: 0pt; padding: 0pt; }
 
 A:link, A:visited, A:active { color: #000000; }
 A:hover { color: #ff0099; }
 
-H1 { font-size: 20pt; padding: 0px; margin: 8px 0px 8px 0px; }
-H2 { font-size: 16pt; padding: 0px; margin: 8px 0px 8px 0px; }
-H3 { font-size: 12pt; padding: 0px; margin: 8px 0px 8px 0px; }
-H4 { font-size: 10pt; padding: 0px; margin: 8px 0px 8px 0px; }
-H5 { font-size: 9pt;  padding: 0px; margin: 8px 0px 8px 0px; }
-H6 { font-size: 8pt;  padding: 0px; margin: 8px 0px 8px 0px; }
+H1 { font-size: 20pt; padding: 0pt; margin: 8pt 0pt 8pt 0pt; }
+H2 { font-size: 16pt; padding: 0pt; margin: 8pt 0pt 8pt 0pt; }
+H3 { font-size: 12pt; padding: 0pt; margin: 8pt 0pt 8pt 0pt; }
+H4 { font-size: 10pt; padding: 0pt; margin: 8pt 0pt 8pt 0pt; }
+H5 { font-size: 9pt;  padding: 0pt; margin: 8pt 0pt 8pt 0pt; }
+H6 { font-size: 8pt;  padding: 0pt; margin: 8pt 0pt 8pt 0pt; }
